예약상세페이지.css

--- a/예약상세페이지.css
+++ b/예약상세페이지.css
@@ -93,6 +93,8 @@ body {
 .reservation-info p {
     margin: 5px 0;
     color: #333;
+    font-size: 1.1em;
+    line-height: 1.5em;
 }
 
 .reservation-img{
